fix resize window and hide scroll when screen too small

--- a/src/app/about-me-page/about-me-date/about-me-date.component.scss
+++ b/src/app/about-me-page/about-me-date/about-me-date.component.scss
@@ -5,10 +5,15 @@
 }
 
 #sliderContainer {
+	display: none;
+}
+
+@media only screen and (min-width: 550px) {
+#sliderContainer {
 	margin: 30px 5px 10px 5px;
 	position: sticky;
 	top: 10px;
-	width: 120px;
+	width: 100px;
 	display: inline-block;
 	text-align: center;
 }
@@ -17,6 +22,7 @@
 	height: calc(100vh - 30px);
 	margin-top: 7px;
 	margin-bottom: 10px;
+	pointer-events: none;
 }
 
 #dateSlider ::ng-deep .mat-slider-thumb-container,
@@ -40,19 +46,22 @@
 	width: 100%;
 }
 
-#labelContainer:not(.disabled) {
-	cursor: grab;
-}
+//disabling slider interactions for now
+//#labelContainer:not(.disabled) {
+//	cursor: grab;
+//}
 
 .sliderLabel {
 	margin: 0;
-	color: var(--hoverable-color);
+	//color: var(--hoverable-color);
+	color: var(--primary-text-color);
 	display: inline-block;
 }
 
-#labelContainer:hover .sliderLabel {
-	color: var(--hovered-color);
-}
+//disabling slider interactions for now
+//#labelContainer:hover .sliderLabel {
+//	color: var(--hovered-color);
+//}
 
 #labelContainer.disabled .sliderLabel {
 	color: var(--disabled-color);
@@ -70,11 +79,13 @@
 	width: calc(50% - 5px);
 	left: 50%;
 }
+}
 
 #textContainer {
 	display: inline-block;
 	flex-grow: 1;
 	margin-right: 15px;
+	margin-left: 15px;
 }
 
 .year {
