--- a/src/app/about-me-page/about-me/about-me.component.scss
+++ b/src/app/about-me-page/about-me/about-me.component.scss
@@ -1,16 +1,24 @@
 #about-page-container {
 	background-color: var(--background-color);
+	//margin-top: 25px;
 	padding-top: 10px;
 	margin-bottom: 10px;
+	width: auto;
+	min-width: 550px;
 }
 
 #title {
+	text-align: right;
+	//margin-left: 100px;
 	margin-top: 0;
 	margin-bottom: 20px;
+	overflow-wrap: break-word;
 }
 
 #subtitle {
+	text-align: right;
 	margin-bottom: 40px;
+	overflow-wrap: break-word;
 }
 
 #separator {
